<resources>

    <string name="app_name">Goodang</string>

    <string name="label_copyright_splash">Copyright Goodang v0.0.1</string>

    <string name="label_login">Login</string>

    <string name="label_lupa_kata_sandi">Forgot Password</string>

    <string name="label_login_header_content">Please login with your email</string>

    <string name="label_email_hint">Email</string>

    <string name="label_password_hint">Password</string>

    <string name="label_tv_lupa_kata_sandi">Are your forgot the password?</string>

    <string name="label_assets_home">Assets</string>

    <string name="label_menu_title_menu_asset_masuk">Assets In</string>

    <string name="label_menu_title_menu_stock_masuk">Stock In</string>

    <string name="label_menu_desc_1_menu_asset_masuk">How many item?</string>
    <string name="label_menu_desc_2_menu_asset_masuk">which in today?</string>

    <string name="label_menu_title_menu_asset_keluar">Assets Out</string>
    <string name="label_menu_title_menu_stock_keluar">Stock Out</string>

    <string name="label_menu_desc_1_menu_asset_keluar">How many item?</string>
    <string name="label_menu_desc_2_menu_asset_keluar">We have today?</string>


    <string name="label_menu_title_menu_stock_opname">Stock Opname</string>
    <string name="label_menu_desc_1_menu_stock_opname">how much in stock</string>
    <string name="label_menu_desc_2_menu_stock_opname">Item today?</string>


    <string name="label_menu_title_menu_barang_assets">Item Assets</string>
    <string name="label_menu_title_menu_barang_stock">Item Stock</string>

    <string name="label_menu_desc_1_menu_barang_assets">How many item</string>
    <string name="label_menu_desc_2_menu_barang_assets">We have now?</string>

    <string name="label_profil_title_page">Profile</string>

    <string name="label_title_page_list_gudang">Warehouse</string>

    <string name="label_title_page_list_barang">Items</string>

    <string name="label_title_page_list_barang_stock">List Items</string>

    <string name="label_phone_number_profile">Phone Number</string>

    <string name="label_address_profile">Address</string>

    <string name="label_pengaturan_profile_detail">Profile Setting</string>

    <string name="label_ganti_password_profile">Change Password</string>

    <string name="label_tv_logout">Logout</string>

    <string name="label_version_lippo_gudang_profile">Goodang v0.0.1</string>

    <string name="label_header_list_gudang">Please select warehouse first!</string>

    <string name="label_hint_search_list_barang">Input Product Name</string>

    <string name="label_menu_title_menu_item_barang_assets">Item Assets</string>

    <string name="label_menu_title_menu_item_barang_stock">Item Stock</string>

    <string name="label_quantity">Quantity</string>

    <string name="label_pno">No Po</string>

    <string name="label_last_update">Last Update</string>

    <string name="label_waktu_scan">Waktu Scan</string>

    <string name="label_detail_barang">Detail Item</string>

    <string name="label_detail_barang_stock">Detail Item Stock</string>

    <string name="label_detail_per_gudang">Detail per-warehouse</string>

    <string name="label_detail_per_scan">Detail per-scan</string>

    <string name="label_title_page_riwayat_list_stock_opname">Stock Opname History</string>

    <string name="label_hint_input_nama">Input Name</string>

    <string name="label_add_stock_opname">Add stock opname</string>

    <string name="label_tanggal_waktu">Date/Time</string>

    <string name="label_status_draft">DRAFT</string>
    <string name="label_status_publish">PUBLISH</string>

    <string name="label_title_list_scanned_product">List Scanned Product</string>

    <string name="label_scan_product">Scan Item</string>

    <string name="label_detail_scanned_product">Detail Scanned Product</string>

    <string name="label_gudang">Gudang</string>

    <string name="label_code">Code</string>

    <string name="label_loading_title_dialog">Please wait..</string>

    <string name="label_scan_stock_opname">Scan Stock Opname</string>

    <string name="label_scan_assets_keluar">Scan Assets Out</string>

    <string name="label_scan_assets_masuk">Scan Assets In</string>

    <string name="label_scan_stock_masuk">Scan Stock In</string>

    <string name="label_scan_stock_keluar">Scan Stock Out</string>

    <string name="label_header_scan_1">Please scan the Barcode </string>
    <string name="label_header_scan_2">to get data</string>

    <string name="label_bottom_scan_1">Make sure you take space</string>
    <string name="label_bottom_scan_2">enough when scanning</string>
    <string name="label_bottom_scan_3">Bar Code</string>


    <string name="label_permission_diperlukan">Permission Denied</string>

    <string name="label_rational_message">We need permission to camera scan</string>

    <string name="label_rational_message_camera_photo">We need permission to camera</string>

    <string name="label_denied_message">If you reject permission,you can not use this service. Please turn on permissions at [Setting] > [Permission]</string>

    <string name="label_tambah_stock_opname">Add Stock Opname</string>

    <string name="label_input_nama_stock_opname">Input name of stock opname</string>

    <string name="label_input_quantity">Input Quantity</string>

    <string name="label_input_pno">Input No Po</string>

    <string name="label_input_quantity_barang_stock">Input Quantity Item Stock</string>

    <string name="label_tambah">Add</string>

    <string name="label_update">Update</string>

    <string name="label_form_wajib_diisi">Form is required</string>

    <string name="label_update_quantity">Update Quantity</string>

    <string name="label_cancel">Cancel</string>

    <string name="label_header_content_dialog_delete_stockopname1">Are you sure</string>
    <string name="label_header_content_dialog_delete_stockopname2">to delete Item?</string>

    <string name="label_header_content_dialog_logout1">Are you sure</string>
    <string name="label_header_content_dialog_logout2">Logout?</string>


    <string name="label_header_content_dialog_change_password1">Success update</string>
    <string name="label_header_content_dialog_change_password2">password</string>

    <string name="label_header_content_dialog_update_photo1">Success update</string>
    <string name="label_header_content_dialog_update_photo2">your photo</string>

    <string name="label_ya">Yes</string>
    <string name="label_tidak">No</string>

    <string name="label_title_data_publish_berhasil">Success Submit Data</string>

    <string name="label_title_forgot_berhasil">Email Sent</string>

    <string name="label_content_dialog_forgot_berhasil">Please cek email for get the new password</string>

    <string name="label_oke">Ok</string>

    <string name="label_input_kode_barang">Input Item Code</string>

    <string name="label_check">Check</string>

    <string name="label_data_terkirim">Data Sent</string>

    <string name="label_list_produk">Product List</string>
    <string name="label_lanjutkan_scan">Next Scan</string>

    <string name="label_list_assets">Assets</string>

    <string name="label_list_barang">Items</string>

    <string name="label_input_nama_barang">Input Item Name</string>

    <string name="label_list_assets_keluar">Assets Out</string>

    <string name="label_list_stock_masuk">Stock In</string>

    <string name="label_list_stock_keluar">Stock Out</string>

    <string name="label_list_assets_masuk">Assets In</string>

    <string name="label_detail_assets">Detail Assets</string>

    <string name="label_detail_assets_keluar">Detail Assets Out</string>

    <string name="label_detail_stock_barang_masuk">Detail Barang In</string>

    <string name="label_detail_stock_barang_keluar">Detail Barang Out</string>

    <string name="label_detail_assets_masuk">Detail Barang In</string>

    <string name="label_informasi_detail_barang">Information of item</string>

    <string name="label_keterangan">Description</string>

    <string name="label_tanggal">Date</string>

    <string name="label_waktu">Time</string>

    <string name="label_hint_input_keterangan">Input description right here</string>

    <string name="label_submit">Submit</string>

    <string name="label_title_form_assets_keluar">Form Assets Out</string>

    <string name="label_title_form_assets_masuk">Form Assets In</string>

    <string name="label_title_form_stock_masuk">Form Stock In</string>

    <string name="label_title_form_stock_keluar">Form Stock Out</string>

    <string name="label_silakan_lengkapi_form">Please complete form below!</string>

    <string name="label_assets">Assets</string>

    <string name="label_stock">Stock</string>

    <string name="label_tipe_quantity">Quantity Type</string>

    <string name="label_input_stock_quantity">Input Stock Quantity</string>


    <string name="label_something_wrong">Problem with server</string>

    <string name="label_koneksi_error">Network error, Please check connection</string>

    <string name="label_header_forgot_pass_sub1">Please type your mail address</string>
    <string name="label_header_forgot_pass_sub2">for get new password</string>

    <string name="label_kirim_email">Send Email</string>

    <string name="label_back_page_login">Back to login page</string>

    <string name="label_kode">code</string>


    <string name="label_kembali">CLOSE</string>
    <string name="label_kembali_dialog">BACK</string>
    <string name="label_kembali_dialog_failure">Back</string>
    <string name="label_ulangi_dialog_failure">Repeat</string>
    <string name="label_ulangi">Repeat</string>
    <string name="label_notif">Warning</string>

    <string name="label_failure_content1">Network error</string>
    <string name="label_failure_content2">Please check connection</string>


    <string name="label_failure_content_server_title">Sorry</string>
    <string name="label_failure_content_server_content">Problem with server</string>

    <string name="label_hint_password_saat_ini">Current Password</string>

    <string name="label_hint_password_baru">New Password</string>

    <string name="label_hint_retype_password">Re-type Password</string>

    <string name="label_simpan">Save</string>

    <string name="label_retype_wrong">New Password with Re-type Password not match</string>

    <string name="label_lama_masih_sama">Old password wrong</string>

    <string name="label_password_tidak_boleh_sama">New password still same with old password</string>


    <string name="label_gallery">Gallery</string>
    <string name="label_camera">Camera</string>

    <string name="label_header_pilih_opsi_photo">Select photo using options</string>

    <string name="label_update_profile">Update Profile</string>

    <string name="label_please_wait_spinner_gudang">please wait getting data</string>

    <string name="labe_hint_pilih_gudang">Select Warehouse</string>

    <string name="label_pilih_gudang_terlebih_dahulu">Select warehouse first</string>

    <string name="label_semua_status">All Status</string>
    <string name="label_draft_status">Draft Status</string>
    <string name="label_pending_status">Pending Status</string>
    <string name="label_publish_status">Publish Status</string>

    <string name="label_scanned">Scanned</string>

    <string name="label_selected_wirehouse_first">Select warehouse first</string>
    <string name="label_selected_quantity_type_first">Select quantity type first</string>

    <string name="label_pcs">PCS</string>

    <string name="label_stockopname_asset_added_scan_1">Success add products code </string>
    <string name="label_stockopname_asset_added_scan_2">to system</string>

    <string name="label_isikan_tipe_quantity_dahulu">Fill in the Quantity Type first</string>

    <string name="label_empty_data_title">Data is Empty</string>
    <string name="label_empty_data_content">No data is displayed at this time</string>

</resources>
