<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/margin20"
              android:layout_marginRight="@dimen/margin20"
              android:background="@drawable/bg_rounded_dialog"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/open_sans_semibold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20"
            android:layout_marginRight="@dimen/margin20"
            android:layout_marginTop="@dimen/margin25"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/margin5"
            android:text="@string/label_notif"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_large"
            tools:ignore="MissingPrefix"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_Content"
                fontPath="fonts/open_sans_regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin20"
                android:layout_marginRight="@dimen/margin20"
                android:layout_marginTop="@dimen/margin25"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/margin5"
                android:text="@string/label_failure_content1"
                android:textSize="@dimen/text_small_default"
                tools:ignore="MissingPrefix"/>

            <TextView
                android:id="@+id/tvContent2"
                fontPath="fonts/open_sans_regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin20"
                android:layout_marginRight="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/margin5"
                android:text="@string/label_failure_content2"
                android:textSize="@dimen/text_small_default"
                tools:ignore="MissingPrefix"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginRight="@dimen/margin25"
            android:layout_marginLeft="@dimen/margin25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin15"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                fontPath="fonts/open_sans_bold.ttf"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/margin45"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin10"
                android:layout_marginRight="@dimen/margin15"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/bg_rounded_btn_dialog_cancel_stock_opname"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/label_kembali_dialog_failure"
                android:textAllCaps="false"
                android:textColor="@color/color_tv_blue_btn_login"
                android:textSize="@dimen/text_semi_medium"
                tools:ignore="MissingPrefix">

            </Button>


            <Button
                android:id="@+id/btnRefresh"
                fontPath="fonts/open_sans_bold.ttf"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/margin45"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/bg_rounded_btn_dialog_add_stock_opname"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/label_ulangi_dialog_failure"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_semi_medium"
                tools:ignore="MissingPrefix">

            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>