<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin35"
    android:layout_marginRight="@dimen/margin35"
    android:background="@drawable/bg_rounded_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        fontPath="fonts/open_sans_bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin15"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:layout_marginTop="@dimen/margin35"
        android:gravity="center"
        android:text="@string/label_update_quantity"
        android:textColor="@color/color_gray_title_add_dialog"
        android:textSize="@dimen/text_semi_large"
        tools:ignore="MissingPrefix"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginTop="@dimen/margin15"
        android:background="@drawable/bg_rounded_dialog_input_stock_opname">

        <EditText
            android:id="@+id/etQty"
            fontPath="fonts/open_sans_semibold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin15"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginRight="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/label_input_quantity"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/color_gray_title_add_dialog"
            android:textSize="@dimen/text_semi_medium"
            tools:ignore="MissingPrefix"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin25"
        android:layout_marginTop="@dimen/margin25"
        android:gravity="center"
        android:layout_marginRight="@dimen/margin9"
        android:layout_marginLeft="@dimen/margin9"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCancel"
            fontPath="fonts/open_sans_bold.ttf"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/margin45"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginRight="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/bg_rounded_btn_dialog_cancel_stock_opname"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/label_cancel"
            android:textAllCaps="false"
            android:textColor="@color/color_tv_blue_btn_login"
            android:textSize="@dimen/text_semi_medium"
            tools:ignore="MissingPrefix">

        </Button>


        <Button
            android:id="@+id/btnUpdate"
            fontPath="fonts/open_sans_bold.ttf"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/margin45"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/bg_rounded_btn_dialog_add_stock_opname"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/label_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_semi_medium"
            tools:ignore="MissingPrefix">

        </Button>

    </LinearLayout>

</LinearLayout>