<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/margin35"
    android:layout_marginRight="@dimen/margin35"
    android:background="@drawable/bg_rounded_dialog"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        fontPath="fonts/open_sans_bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin15"
        android:layout_marginLeft="@dimen/margin15"
        android:layout_marginRight="@dimen/margin15"
        android:layout_marginTop="@dimen/margin35"
        android:gravity="center"
        android:text="@string/label_tambah_stock_opname"
        android:textColor="@color/color_gray_title_add_dialog"
        android:textSize="@dimen/text_semi_large"
        tools:ignore="MissingPrefix"/>

    <LinearLayout
        android:layout_marginTop="@dimen/margin15"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginLeft="@dimen/margin20"
        android:background="@drawable/bg_rounded_dialog_input_stock_opname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etStock"
            android:maxLines="1"
            android:ellipsize="end"
            fontPath="fonts/open_sans_semibold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:layout_marginBottom="@dimen/margin15"
            android:layout_marginLeft="@dimen/margin15"
            android:layout_marginRight="@dimen/margin15"
            android:layout_marginTop="@dimen/margin15"
            android:gravity="center"
            android:hint="@string/label_input_nama_stock_opname"
            android:textColor="@color/color_gray_title_add_dialog"
            android:textSize="@dimen/text_semi_medium"
            tools:ignore="MissingPrefix"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnTambah"
        fontPath="fonts/open_sans_bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin45"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin35"
        android:layout_marginTop="@dimen/margin35"
        android:background="@drawable/bg_rounded_btn_dialog_add_stock_opname"
        android:gravity="center"
        android:textAllCaps="false"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin45"
        android:paddingRight="@dimen/margin45"
        android:text="@string/label_tambah"
        android:textColor="@color/white"
        android:textSize="@dimen/text_semi_medium"
        tools:ignore="MissingPrefix">

    </Button>

</LinearLayout>